# unlog

./: .clang-format  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
include/: unlog.hpp
include/unlog/: config.hpp  format.hpp  logger.hpp  types.hpp  utils.hpp
src/: log.cpp  logger.cpp  utils.cpp
tests/: 001.cpp  002.cpp  CMakeLists.txt  utils.cpp  utils.hpp
utils/: format.sh
