load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "libunlog",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.hpp",
    ]),
    includes = ["include"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)
